add jwt and mongoose

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-MY_SECRET=mysupersecretpassword
+APP_SECRET=mysupersecretpassword
+MONGO_URI=mongodb+srv://db-crawler-gakxd.mongodb.net/dictionary
+MONGO_USER=admin123
+MONGO_PASS=admin123
