--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,9 @@
 version: "3.7"
 
 services:
-  app:
+  app-user:
     build: ./
     container_name: user-service
-    tty: true
     environment:
       NODE_ENV: 'development'
     volumes: 
