create user route and authorize

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 APP_SECRET=mysupersecretpassword
-MONGO_URI=mongodb+srv://db-crawler-gakxd.mongodb.net/dictionary
-MONGO_USER=admin123
-MONGO_PASS=admin123
+MONGO_URI=mongodb://138.91.34.70:27017/database
+MONGO_USER=
+MONGO_PASS=
