--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-validation": "^3.0.8",
     "express-validator": "^6.10.0",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
@@ -19,7 +22,9 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.15",
     "morgan": "~1.9.1",
-    "node-schedule": "^2.0.0"
+    "node-schedule": "^2.0.0",
+    "swagger-jsdoc": "^7.0.0-rc.6",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.0",
